--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
      <ul class="nav nav-tabs">
        <li><%= link_to "Blocmarks", welcome_index_path %></li>
        <li><%= link_to "About", welcome_about_path %></li>
+       <li><%= link_to "Topics", topics_path %></li>
+
 
        <div class="pull-right user-info">
       <% if user_signed_in? %>
