book mark views and authorization completed

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,10 +6,12 @@
       <div class="media">
         <div class="media-body">
           <h4 class="media-heading">
-             <%= link_to topic.title, topic %>
-             <div class="bookmark_box">
-               <p> </p>
-             </div>
+             <%= link_to topic.title, topic %> <br>
+             <p>
+              <% topic.bookmarks.each do |bookmark| %> <br>
+              <%= bookmark.url %>
+              <% end %>
+            </p>
           </h4>
         </div>
       </div>
