--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,3 +1,7 @@
 <h1> <%= @topic.title %>
+
   <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+  <%= link_to "Add Bookmark", new_topic_bookmark_path(@topic), class: 'btn btn-success' %>
 </h1>
+
+<%= render partial: 'bookmarks/list', locals: { topic: @topic } %>
