--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,20 +1,22 @@
 <h1> Topics <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %> </h1>
 
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
       <% @topics.each do |topic| %>
-      <div class="media">
-        <div class="media-body">
           <h4 class="media-heading">
-             <%= link_to topic.title, topic %> <br>
-             <p>
-              <% topic.bookmarks.each do |bookmark| %> <br>
-              <%= bookmark.url %>
-              <% end %>
-            </p>
+             <%= link_to topic.title, topic %>
           </h4>
-        </div>
-      </div>
+
+         <div class="row">
+         <% topic.bookmarks.each do |bookmark| %>
+          <div class="col-sm-3">
+            <div class="well">
+              <p><%= bookmark.url %></p>
+            </div>
+            <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
+          </div>
+         <% end %>
+         </div>
       <% end %>
     </div>
   </div>
