--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
        <li><%= link_to "Blocmarks", welcome_index_path %></li>
        <li><%= link_to "About", welcome_about_path %></li>
        <li><%= link_to "Topics", topics_path %></li>
+       <li><%= link_to "Users", users_path %></li>
 
 
        <div class="pull-right user-info">
